[package]
name = "james-roberto"
version = "0.1.0"
authors = ["Gabriel Pacheco <gabrielpacheco23@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# serenity = {version = "0.10.7", features = ["client", "stardard_framework", "rustls_backend", "voice"]}
# tokio = {version = "1.6.1", features = ["macros", "rt-multi-thread"]}
# songbird = "0.1.6"
# downloader = {version= "0.2.6", default-features=false}
[dependencies.downloader]
version = "0.2.6"
default_features = false

[features]
none = ["downloader/default"]

[dependencies.songbird]
version = "0.1.6"

[dependencies.serenity]
version = "0.10.7"
features = ["client", "standard_framework", "voice", "rustls_backend"]

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread"]
